--- a/envs/node4.env
+++ b/envs/node4.env
@@ -1,4 +1,4 @@
-HOSTNAME=143.248.188.85
+HOSTNAME=klaytn-node-4.asia-northeast1-b.c.deep-rainfall-236010.internal
 CN_P2P=32303
 CN_WS=8503
 CN_RPC=8603
