--- a/envs/node1.env
+++ b/envs/node1.env
@@ -1,4 +1,4 @@
-HOSTNAME=143.248.188.85
+HOSTNAME=klaytn-node-1.asia-northeast1-b.c.deep-rainfall-236010.internal
 CN_P2P=32300
 CN_WS=8500
 CN_RPC=8600
