--- a/envs/node2.env
+++ b/envs/node2.env
@@ -1,4 +1,4 @@
-HOSTNAME=143.248.188.85
+HOSTNAME=klaytn-node-2.asia-northeast1-b.c.deep-rainfall-236010.internal
 CN_P2P=32301
 CN_WS=8501
 CN_RPC=8601
