--- a/envs/node3.env
+++ b/envs/node3.env
@@ -1,4 +1,4 @@
-HOSTNAME=143.248.188.85
+HOSTNAME=klaytn-node-3.asia-northeast1-b.c.deep-rainfall-236010.internal
 CN_P2P=32302
 CN_WS=8502
 CN_RPC=8602
