YAHO - use docker-compose instead of shell background job

--- a/envs/node1.env
+++ b/envs/node1.env
@@ -1,4 +1,4 @@
-HOSTNAME=klaytn-node-1.asia-northeast1-b.c.deep-rainfall-236010.internal
+HOSTNAME=10.146.0.8
 CN_P2P=32300
 CN_WS=8500
 CN_RPC=8600
