--- a/envs/node2.env
+++ b/envs/node2.env
@@ -1,4 +1,4 @@
-HOSTNAME=klaytn-node-2.asia-northeast1-b.c.deep-rainfall-236010.internal
+HOSTNAME=10.146.0.9
 CN_P2P=32301
 CN_WS=8501
 CN_RPC=8601
