--- a/envs/node3.env
+++ b/envs/node3.env
@@ -1,4 +1,4 @@
-HOSTNAME=klaytn-node-3.asia-northeast1-b.c.deep-rainfall-236010.internal
+HOSTNAME=10.146.0.10
 CN_P2P=32302
 CN_WS=8502
 CN_RPC=8602
